1.0.3 (unreleased)
=====
Features:
* Implement default classification.
* Allow zyto and admin roles to manage Doctors.

1.0.2
=====
Features:
* Result report copies
* Port Doctor model to be subclass of Person.
* Drop time part in date section of result_reports.
* Security update for devise gem.
* Drop P16/HPV info from case lists if module is not enabled.
* Add translation for crud.action.more.
* Drop links to scans in case lists.
* Drop finding_class column in cases list.

1.0.1
=====
Features:
* Sanitize finding_text in result_report view.
* Add PDF action link to cases in lists.
* Use Case#pdf_name as filename for cases#show.pdf.
* Send BCC to sender for email results.
* Sanitize finding_text in result_report view.

1.0.0
=====
This is the first major release!